# stark

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/source/: architecture.md  extending.md  hello_world.md  index.md  io.md  settings.md  setup.md  simulation_loop.md
docs/source/_ext/: symx_pygments.py
examples/: main.cpp
pystark/cpp/: CMakeLists.txt  nanobind_stark_include_all.h
pystark/cpp/models/: pystark_Simulation.cpp
pystark/cpp/utils/: pystark_utils.cpp
stark/: CMakeLists.txt
stark/include/: stark
stark/src/core/: Callbacks.h  EventDrivenScript.cpp  Settings.cpp  Settings.h  Stark.cpp  Stark.h
stark/src/models/: MeshOutputGroups.cpp  Simulation.cpp  Simulation.h  distances.cpp  time_integration.cpp  types.h
stark/src/models/deformables/: Deformables.cpp  Deformables.h  DeformablesMeshOutput.cpp  DeformablesMeshOutput.h  PointDynamics.cpp  PointDynamics.h  PointSetHandler.cpp  deformable_tools.cpp
stark/src/models/deformables/line/: EnergySegmentStrain.cpp  EnergySegmentStrain.h
stark/src/models/deformables/point/: EnergyLumpedInertia.cpp  EnergyLumpedInertia.h  EnergyPrescribedPositions.cpp  EnergyPrescribedPositions.h
stark/src/models/deformables/surface/: EnergyDiscreteShells.cpp  EnergyDiscreteShells.h  EnergyQuadraticBending.cpp  EnergyQuadraticBending.h  EnergyTriangleArea.cpp  EnergyTriangleArea.h  EnergyTriangleStrain.cpp  EnergyTriangleStrain.h  EnergyTriangleStretching.cpp  EnergyTriangleStretching.h
stark/src/models/deformables/volume/: EnergyPrescribedPositionsTetBarycentric.cpp  EnergyPrescribedPositionsTetBarycentric.h  EnergyTetStrain.cpp  EnergyTetStrain.h
stark/src/models/interactions/: EnergyAttachments.cpp  EnergyAttachments.h  EnergyFrictionalContact.cpp  EnergyFrictionalContact.h  Interactions.cpp  Interactions.h  friction_geometry.cpp
stark/src/models/presets/: DeformablesPresets.cpp  DeformablesPresets.h  Presets.cpp  Presets.h  RigidBodyPresets.cpp  RigidBodyPresets.h  deformables_preset_types.cpp
stark/src/models/rigidbodies/: EnergyRigidBodyConstraints.cpp  EnergyRigidBodyConstraints.h  EnergyRigidBodyInertia.cpp  EnergyRigidBodyInertia.h  RigidBodies.cpp  RigidBodies.h  RigidBodiesMeshOutput.cpp  RigidBodiesMeshOutput.h  RigidBodyDynamics.cpp  RigidBodyDynamics.h  RigidBodyHandler.cpp  inertia_tensors.cpp  rigidbody_transformations.cpp
stark/src/utils/: blends.cpp  include.h  mesh_generators.cpp  mesh_usd_exporter.cpp  mesh_usd_exporter.h  mesh_utils.cpp  mesh_utils.h
tests/: CMakeLists.txt  rb_constraints.cpp
